Added grid system, and organised the home and profile pages

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,2 +1,54 @@
-<h1>Pages#profile</h1>
-<p>Find me in app/views/pages/profile.html.erb</p>
+<!-- make a row for banner display -->
+<div class="row">
+  <div class="col-xs-12">
+    <div class="jumbotron">
+      <p>Banner</p>
+    </div>
+  </div>
+</div>
+
+
+
+<!-- first row starts here -->
+<div class="row">
+
+  <div class="col-xs-3">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <p>Profile</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xs-6">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <p>Tweets</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xs-3">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <p>Who to follow</p>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<!-- start row 2 here -->
+
+<div class="row">
+
+<!-- offset the col by 9 to take it to the right end -->
+  <div class="col-xs-3 col-xs-offset-9">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <p>Trends</p>
+      </div>
+    </div>
+  </div>
+
+</div>
